--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,9 @@ azure-search-documents==11.4.0
 promptflow==1.11.0
 promptflow[azure]==1.11.0
 promptflow-tools==1.4.0
+promptflow-evals
 azure-identity==1.16.1
 python-dotenv==1.0.1
 jsonlines
 promptflow.evals
-nbconvert
+openpyxl
