--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ promptflow[azure]==1.11.0
 promptflow-tools==1.4.0
 promptflow-evals
 azure-identity==1.16.1
+pandas
 python-dotenv==1.0.1
 jsonlines
 promptflow.evals
