--- a/.github/workflows/continuous_delivery_qa.yml
+++ b/.github/workflows/continuous_delivery_qa.yml
@@ -90,7 +90,7 @@ jobs:
       - name: Login to Azure CLI
         uses: azure/login@v2
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}           
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: AI-Based quality evaluation
         env: 
@@ -130,7 +130,25 @@ jobs:
     needs: setup-env-job    
     runs-on: ubuntu-latest
     environment: qa
-    steps:        
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Python 
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.11
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Login to Azure CLI
+        uses: azure/login@v2
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
       - name: AI-Based safety evaluation
         env:
           AZUREAI_PROJECT_NAME: ${{needs.setup-env-job.outputs.AZUREAI_PROJECT_NAME}}
